--- a/.gitignore
+++ b/.gitignore
@@ -21,9 +21,4 @@ nbbuild/
 dist/
 nbdist/
 .nb-gradle/
-target/generated-sources/
-target/generated-test-sources/
-target/test-classes/
-target/classes
-target/maven-archiver
-target/maven-status
+target/
