--- a/.gitignore
+++ b/.gitignore
@@ -21,4 +21,9 @@ nbbuild/
 dist/
 nbdist/
 .nb-gradle/
-target/
+target/generated-sources/
+target/generated-test-sources/
+target/test-classes/
+target/classes
+target/maven-archiver
+target/maven-status
